# campaign-network-graphs

./: .gitignore  .pre-commit-config.yaml  2d-pyvis-got.ipynb  3d-networkx-campaign.ipynb  Network.py  Procfile  README.md  app.py  gameofthrones.html  prep.py  pyproject.toml  requirements.txt  viz.py
older_stuff/: 2d-pyvis-got.ipynb  3d-networkx-campaign.ipynb  3d-plotly-campaign.ipynb
output/: campaign-cast.html
pages/: Write-up.py
src/: prep.py  viz.py  writeup_engine.py
